--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,3 +4,23 @@
   margin: 0;
   padding: 0;
 }
+
+/* MAIN GRID */
+/* ------------------------ */
+.main-grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
+  height: 300px;
+  border: 1px solid #000;
+  margin: auto;
+  padding: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cards {
+  width: 60px;
+  height: 60px;
+  border: 1px solid #f00;
+}
