--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,31 @@
   padding: 0;
 }
 
+/* OVERLAY */
+/* ------------------------ */
+.overlay {
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
+  display: none;
+}
+
+/* START POPUP */
+/* ------------------------ */
+.start-popup {
+  position: absolute;
+  width: 300px;
+  height: 150px;
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%);
+  border: 1px solid #000;
+  z-index: 3;
+  display: none;
+}
+
 /* MAIN HEADER */
 /* ------------------------ */
 .main-header h1 {
