--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,10 +56,12 @@
   display: flex;
   width: 90%;
   margin: auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .infos > div {
-  width: 20%;
+  width: 30%;
   height: 20px;
   margin: 5px;
   border: 1px solid #000;
