--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,13 @@
   padding: 0;
 }
 
+/* ANIMATIONS */
+/* ------------------------ */
+@keyframes flip {
+  0% { transform: rotateY(0deg); }
+  100% { transform: rotateY(90deg); }
+}
+
 /* OVERLAY */
 /* ------------------------ */
 .overlay {
@@ -82,6 +89,35 @@
   width: 60px;
   height: 60px;
   border: 1px solid #f00;
+  position: relative;
+}
+
+.cards:hover {
+  cursor: pointer;
+}
+
+.cards:hover .card-back {
+  animation: flip 0.1s ease-in forwards;
+}
+
+.cards:hover .card-front {
+  animation: flip 0.1s 0.1s ease-out forwards reverse;
+}
+
+.card-front {
+  background-color: #49adba;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(90deg);
+}
+
+.card-back {
+  background-color: #323636;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /* MIN 480 PX */
