feat: add event listener when click on card

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,7 +69,7 @@
   position: relative;
 }
 
-.cards:hover {
+/* .cards:hover {
   cursor: pointer;
 }
 
@@ -79,7 +79,7 @@
 
 .cards:hover .card-front {
   animation: flip 0.1s 0.1s ease-out forwards reverse;
-}
+} */
 
 .card-front {
   background-color: #49adba;
