--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,12 @@
   100% { transform: rotateY(90deg); }
 }
 
+@keyframes win {
+  0% { background-color: #373737; }
+  50% { background-color: #9fe269; }
+  100% { background-color: #83bb55; }
+}
+
 /* WIN POPUP */
 /* ------------------------ */
 .win-popup {
@@ -89,6 +95,10 @@
   animation: flip 0.1s 0.1s ease-out forwards;
 }
 
+.card-win {
+  animation: win 0.5s ease forwards; 
+}
+
 .card-front {
   background-color: #49adba;
   width: 100%;
@@ -107,42 +117,42 @@
 
 #a1 > .card-front,
 #a2 > .card-front {
-  background: url("../images/a-bread.svg") no-repeat center;
+  background: #49adba url("../images/a-bread.svg") no-repeat center;
 }
 
 #b1 > .card-front,
 #b2 > .card-front {
-  background: url("../images/b-hot-tea.svg") no-repeat center;
+  background: #49adba url("../images/b-hot-tea.svg") no-repeat center;
 }
 
 #c1 > .card-front,
 #c2 > .card-front {
-  background: url("../images/c-hamburger.svg") no-repeat center;
+  background: #49adba url("../images/c-hamburger.svg") no-repeat center;
 }
 
 #d1 > .card-front,
 #d2 > .card-front {
-  background: url("../images/d-french-fries.svg") no-repeat center;
+  background: #49adba url("../images/d-french-fries.svg") no-repeat center;
 }
 
 #e1 > .card-front,
 #e2 > .card-front {
-  background: url("../images/e-chocolate.svg") no-repeat center;
+  background: #49adba url("../images/e-chocolate.svg") no-repeat center;
 }
 
 #f1 > .card-front,
 #f2 > .card-front {
-  background: url("../images/f-biscuit.svg") no-repeat center;
+  background: #49adba url("../images/f-biscuit.svg") no-repeat center;
 }
 
 #g1 > .card-front,
 #g2 > .card-front {
-  background: url("../images/g-pie.svg") no-repeat center;
+  background: #49adba url("../images/g-pie.svg") no-repeat center;
 }
 
 #h1 > .card-front,
 #h2 > .card-front {
-  background: url("../images/h-cake.svg") no-repeat center;
+  background: #49adba url("../images/h-cake.svg") no-repeat center;
 }
 
 /* MIN 480 PX */
