--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,6 +18,16 @@
   100% { box-shadow: inset 2px 2px 2px 2px #373737; }
 }
 
+/* OVERLAY */
+/* ------------------------ */
+.overlay {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 3;
+}
+
 /* WIN POPUP */
 /* ------------------------ */
 .win-popup {
