--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,19 @@
   z-index: 3;
 }
 
+/* START GAME POPUP */
+/* ------------------------ */
+.start-game-popup {
+  width: 300px;
+  height: 150px;
+  border: 1px solid #000;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+}
+
 /* WIN POPUP */
 /* ------------------------ */
 .win-popup {
