--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,7 +21,7 @@
 /* OVERLAY */
 /* ------------------------ */
 .overlay {
-  background-color: #fff;
+  background-color: #3b1c08;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -31,14 +31,41 @@
 /* START GAME POPUP */
 /* ------------------------ */
 .start-game-popup {
+  text-align: center;
   width: 300px;
   height: 150px;
-  border: 1px solid #000;
+  border: 10px solid #59544e;
+  border-radius: 10px;
+  padding: 15px 8px 8px 8px;
+  background: #baa47d;
+  box-shadow: 0 0 30px #231f1c;
+  color: #462c1b;
+  text-transform: uppercase;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 4;
+}
+
+.start-game-popup button {
+  margin: 20px;
+  padding: 10px 20px;
+  border-left: 20px solid #59544e;
+  border-right: 20px solid #59544e;
+  border-top: 8px solid #59544e;
+  border-bottom: 8px solid #59544e;
+  border-radius: 10px;
+  background: #baa47d;
+  color: #462c1b;
+  font-weight: bold;
+  text-transform: uppercase;
+  box-shadow: 0 2px 10px #231f1c;
+}
+
+.start-game-popup button:hover {
+  cursor: pointer;
+  background: #f0d689;
 }
 
 /* WIN POPUP */
