--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+body {
+  background: #292824;
+}
+
 /* ANIMATIONS */
 /* ------------------------ */
 @keyframes flip {
@@ -21,7 +25,7 @@
 /* OVERLAY */
 /* ------------------------ */
 .overlay {
-  background-color: #3b1c08;
+  background: #3b1c08;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -97,11 +101,22 @@
   justify-content: space-between;
 }
 
-.infos > div {
-  width: 30%;
-  height: 20px;
-  margin: 5px;
-  border: 1px solid #000;
+.user-play-infos {
+  display: flex;
+}
+
+.user-play-infos > div {
+  margin: 0 10px;
+}
+
+.stars,
+.moves {
+  display: flex;
+}
+
+.fa-heart,
+.fa-hashtag {
+  margin: 0 5px;
 }
 
 /* MAIN GRID */
