--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,9 +17,9 @@ body {
 }
 
 @keyframes win {
-  0% { box-shadow: inset 0 0 0 0 #373737; }
-  50% { box-shadow: inset 4px 4px 4px 4px #373737; }
-  100% { box-shadow: inset 2px 2px 2px 2px #373737; }
+  0% { opacity: 1; }
+  50% { opacity: 0.3; }
+  100% { opacity: 0.8; border: 3px solid #94b455; border-radius: 3px; }
 }
 
 /* OVERLAY */
@@ -145,8 +145,7 @@ body {
   flex-wrap: wrap;
   width: 300px;
   height: 300px;
-  border: 1px solid #000;
-  margin: auto;
+  margin: 10px auto;
   padding: 10px;
   justify-content: space-between;
   align-items: center;
@@ -155,7 +154,6 @@ body {
 .cards {
   width: 60px;
   height: 60px;
-  border: 1px solid #f00;
   position: relative;
 }
 
@@ -180,63 +178,70 @@ body {
 }
 
 .card-win {
-  border: 5px solid green;
+  animation: win ease 0.5s forwards;
 }
 
 .card-front {
-  background-color: #49adba;
+  background: #d7be6a;
+  background-size: 75%;
+  background-repeat: no-repeat;
+  background-position: center;
   width: 100%;
   height: 100%;
   transform: rotateY(90deg);
+  border: 2px solid #7a737a;
 }
 
 .card-back {
-  background-color: #323636;
+  background: #de5d19;
+  background: linear-gradient(to bottom right, #d52821, #f0a71d);
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  border: 2px solid #7a737a;
+  border-radius: 3px;
 }
 
 #a1 > .card-front,
 #a2 > .card-front {
-  background: #49adba url("../images/a-bread.svg") no-repeat center;
+  background-image: url("../images/a-bread.svg");
 }
 
 #b1 > .card-front,
 #b2 > .card-front {
-  background: #49adba url("../images/b-hot-tea.svg") no-repeat center;
+  background-image: url("../images/b-hot-tea.svg");
 }
 
 #c1 > .card-front,
 #c2 > .card-front {
-  background: #49adba url("../images/c-hamburger.svg") no-repeat center;
+  background-image: url("../images/c-hamburger.svg");
 }
 
 #d1 > .card-front,
 #d2 > .card-front {
-  background: #49adba url("../images/d-french-fries.svg") no-repeat center;
+  background-image: url("../images/d-french-fries.svg");
 }
 
 #e1 > .card-front,
 #e2 > .card-front {
-  background: #49adba url("../images/e-chocolate.svg") no-repeat center;
+  background-image: url("../images/e-chocolate.svg");
 }
 
 #f1 > .card-front,
 #f2 > .card-front {
-  background: #49adba url("../images/f-biscuit.svg") no-repeat center;
+  background-image: url("../images/f-biscuit.svg");
 }
 
 #g1 > .card-front,
 #g2 > .card-front {
-  background: #49adba url("../images/g-pie.svg") no-repeat center;
+  background-image: url("../images/g-pie.svg");
 }
 
 #h1 > .card-front,
 #h2 > .card-front {
-  background: #49adba url("../images/h-cake.svg") no-repeat center;
+  background-image: url("../images/h-cake.svg");
 }
 
 /* MIN 480 PX */
